--- a/backend/ChatServer/src/main/resources/application.properties
+++ b/backend/ChatServer/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=protoChat
-spring.datasource.url=jdbc:mysql://localhost:3306/messages
-spring.datasource.username=root
-spring.datasource.password=1111
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.data.mongodb.uri=mongodb+srv://annahuzenko:z2TDu7sWVsALvs@cluster0.rhbhl9l.mongodb.net/chat?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=chat
+spring.jpa.generate-ddl=true
+
