--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,16 @@
 services:
-  db:
-    image: mysql:8
-    environment:
-      MYSQL_DATABASE: messages
-      MYSQL_ROOT_PASSWORD: 1111
+  auth-server:
+    build: ./backend/AuthServer
     ports:
-      - "3006:3306"
+      - "8081:8080"
+    environment:
+      - JWT_SECRET=${JWT_SECRET}
     networks:
-    - backend
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
+      - backend
   chat-server:
     build: ./backend/ChatServer
     ports:
       - "8080:8080"
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/messages
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: 1111
     networks:
       - backend
 
@@ -34,6 +20,7 @@ services:
       - "3000:80"
     depends_on:
       - chat-server
+      - auth-server
 networks:
   backend:
     driver: bridge
