--- a/backend/ChatServer/src/main/resources/application.properties
+++ b/backend/ChatServer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=protoChat
-spring.data.mongodb.uri=mongodb+srv://annahuzenko:z2TDu7sWVsALvs@cluster0.rhbhl9l.mongodb.net/chat?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=chat
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
 spring.jpa.generate-ddl=true
