--- a/backend/chat-service/src/main/resources/application.properties
+++ b/backend/chat-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=chat
+server.port=8082
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
 spring.jpa.generate-ddl=true
