--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
     "react-stomp-hooks": "^3.0.1",
     "stompjs": "^2.3.3"
   },
