--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
-    "@types/stompjs": "^2.3.9",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-stomp-hooks": "^3.0.1",
-    "stompjs": "^2.3.3"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
