NREAX-25 Fixed: Connection via Gateway

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -33,5 +33,6 @@ spring:
           predicates:
             - Path=/chat/**
           filters:
+            - StripPrefix=1
             - PreserveHostHeader
 
