--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ MONGODB_URI=mongodb+srv://<cluster-address>
 MONGODB_DATABASE=chat
 JWT_SECRET=<your-secret-token>
 FRONTEND_URL=http://localhost:3000
-CHAT_URL=http://localhost:8082
+CHAT_URL=http://chat-service:8082
 AUTH_URL=http://localhost:8081
-GATEWAY_URL=http://localhost:8080
+VITE_GATEWAY_URL=http://localhost:8080
 VITE_WEBSOCKET_URL=ws://localhost:8082/chat
