--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,10 +8,12 @@ RUN npm ci
 COPY . /code
 
 ARG VITE_WEBSOCKET_URL
+ARG VITE_GATEWAY_URL
 
 ENV CI=true
 ENV PORT=3000
 ENV VITE_WEBSOCKET_URL=${VITE_WEBSOCKET_URL}
+ENV VITE_GATEWAY_URL=${VITE_GATEWAY_URL}
 
 CMD [ "npm", "start" ]
 
