NREAX-25 Fixed: Provided by WebFlux

--- a/backend/chat-service/src/main/resources/application.properties
+++ b/backend/chat-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=chat
 server.port=8082
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
-spring.jpa.generate-ddl=true
+spring.main.web-application-type=reactive
