--- a/client/package.json
+++ b/client/package.json
@@ -14,18 +14,12 @@
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-<<<<<<< HEAD
-    "react-icons": "^5.5.0"
-=======
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.3",
-    "react-stomp-hooks": "^3.0.1",
-    "stompjs": "^2.3.3"
->>>>>>> cb8cf7e (NREAX-34 Added react-router-dom)
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
