--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,9 +1,10 @@
-FROM openjdk:21-slim
-
+FROM maven:3.9.9-eclipse-temurin-21 AS builder
 WORKDIR /app
 COPY . .
+RUN mvn clean package -DskipTests
 
-RUN chmod +x mvnw
-RUN ./mvnw package -DskipTests
-
-CMD ["java", "-jar", "target/gateway-0.0.1-SNAPSHOT.jar"]
+FROM eclipse-temurin:21-jdk-alpine
+WORKDIR /app
+COPY --from=builder /app/target/gateway-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8080
+CMD ["java", "-jar", "app.jar"]
