--- a/backend/auth-service/src/main/resources/application.properties
+++ b/backend/auth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8081
 spring.application.name=auth
+server.port=8081
 jwt.secret=${JWT_SECRET}
-spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
-spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
+spring.data.mongodb.uri=${MONGOAUTH_URI}
+spring.data.mongodb.database=${MONGOAUTH_DATABASE}
