--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,9 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - JWT_SECRET=${JWT_SECRET}
+      JWT_SECRET: ${JWT_SECRET}
+      MONGOAUTH_URI: ${MONGODB_URI}
+      MONGOAUTH_DATABASE: ${MONGODB_DATABASE}
     networks:
       - backend
   chat-service:
