--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -38,3 +38,4 @@ RUN ["npm", "run", "build"]
 
 FROM nginx:1.28.0-alpine
 COPY --from=build /code/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
