--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ MONGODB_DATABASE=chat
 JWT_SECRET=<your-secret-token>
 FRONTEND_URL=http://localhost:3000
 CHAT_URL=http://chat-service:8082
-AUTH_URL=http://localhost:8081
+AUTH_URL=http://auth-service:8081
 VITE_GATEWAY_URL=http://localhost:8080
 VITE_WEBSOCKET_URL=ws://localhost:8082/chat
