--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
           '[/**]':
             allowedOrigins:
               - ${FRONTEND_URL}
+              - ${FRONTEND_URL_DEV}
             allowedMethods:
               - GET
               - POST
