--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ MONGODB_URI=mongodb+srv://<cluster-address>
 MONGODB_DATABASE=chat
 JWT_SECRET=<your-secret-token>
 FRONTEND_URL=http://localhost:3000
+FRONTEND_URL_DEV=http://localhost:3001
 CHAT_URL=http://chat-service:8082
 AUTH_URL=http://auth-service:8081
 VITE_GATEWAY_URL=http://localhost:8080
