--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   gateway:
     build:
       context: ./gateway
+      dockerfile: Dockerfile.prod
     ports:
       - "8080:8080"
     environment:
@@ -17,6 +18,7 @@ services:
   auth-service:
     build:
       context: ./backend/auth-service
+      dockerfile: Dockerfile.prod
     ports:
       - "8081:8081"
     environment:
@@ -28,6 +30,7 @@ services:
   chat-service:
     build:
       context: ./backend/chat-service
+      dockerfile: Dockerfile.prod
     ports:
       - "8082:8082"
     environment:
