--- a/backend/auth-service/Dockerfile.prod
+++ b/backend/auth-service/Dockerfile.prod
@@ -1,7 +1,7 @@
 FROM maven:3.9.9-eclipse-temurin-21 AS builder
 WORKDIR /app
 COPY . .
-RUN mvn clean package -DskipTests
+RUN mvn clean package spotbugs:spotbugs spotbugs:check
 
 FROM eclipse-temurin:21-jdk-alpine
 WORKDIR /app
