--- a/backend/chat-service/pom.xml
+++ b/backend/chat-service/pom.xml
@@ -28,6 +28,8 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<spotbugs-dep.version>4.9.3</spotbugs-dep.version>
+		<spotbugs.version>4.9.3.0</spotbugs.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,7 +58,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs-annotations</artifactId>
+			<version>${spotbugs-dep.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -83,6 +89,15 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>${spotbugs.version}</version>
+				<configuration>
+					<xmlOutput>true</xmlOutput>
+					<outputDirectory>${project.build.directory}</outputDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
