NREAX-30 Front linter repaired

--- a/.github/actions/notify-linter-fail/action.yml
+++ b/.github/actions/notify-linter-fail/action.yml
@@ -15,3 +15,6 @@ runs:
           -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
           -d text="*Linter failed* for *${{ inputs.service }}*\n\n${{ inputs.message }}" \
           -d parse_mode=Markdown
+      env:
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
