--- a/backend/chat-service/pom.xml
+++ b/backend/chat-service/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>spotbugs-annotations</artifactId>
 			<version>${spotbugs-dep.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
