NREAX-30 Updated CI

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,6 +57,9 @@ jobs:
         uses: ./.github/actions/notify-linter-fail
         with:
           service: "Auth Service"
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
   build-chat:
     runs-on: ubuntu-latest
@@ -81,9 +84,9 @@ jobs:
           fetch-depth: 0
 
       - uses: ./.github/actions/java-prepare
-      # - name: Test Chat
-      #   working-directory: ${{ env.CHAT_WD }}
-      #   run: mvn clean '-Dtest=com.john.chat.*Test' test
+      - name: Test Chat
+        working-directory: ${{ env.CHAT_WD }}
+        run: mvn clean '-Dtest=com.john.chat.*Test' test
 
       - name: Chat Linter Check
         id: lint-chat
@@ -96,6 +99,9 @@ jobs:
         uses: ./.github/actions/notify-linter-fail
         with:
           service: "Chat Service"
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
   build-gateway:
     runs-on: ubuntu-latest
@@ -114,11 +120,14 @@ jobs:
     needs: build-gateway
     runs-on: ubuntu-latest
     steps:
-      # - uses: ./.github/actions/java-prepare
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: ./.github/actions/java-prepare
       - name: Test Gateway
-        run: echo "Everything is fine :)"
-      #   working-directory: ${{ env.GATEWAY_WD }}
-      #   run: mvn clean '-Dtest=com.john.gateway.*Test' test
+        working-directory: ${{ env.GATEWAY_WD }}
+        run: mvn clean '-Dtest=com.john.gateway.*Test' test
 
   build-front:
     runs-on: ubuntu-latest
@@ -158,6 +167,9 @@ jobs:
         with:
           service: "Client"
           message: "Run `npm run lint` locally for details"
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
   deploy:
     needs: [test-auth, test-chat, test-gateway, test-front]
