--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,6 +57,9 @@ jobs:
         uses: ./.github/actions/notify-linter-fail
         with:
           service: "Auth Service"
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
   build-chat:
     runs-on: ubuntu-latest
@@ -96,6 +99,9 @@ jobs:
         uses: ./.github/actions/notify-linter-fail
         with:
           service: "Chat Service"
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
   build-gateway:
     runs-on: ubuntu-latest
@@ -161,6 +167,9 @@ jobs:
         with:
           service: "Client"
           message: "Run `npm run lint` locally for details"
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
   deploy:
     needs: [test-auth, test-chat, test-gateway, test-front]
