--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -166,7 +166,7 @@ jobs:
         uses: ./.github/actions/notify-linter-fail
         with:
           service: "Client"
-          message: "Run `npm run lint` locally for details"
+          message: "Run 'npm run lint' locally for details"
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
