NREAX-62 Change VITE_WEBSOCKET_URL

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ FRONTEND_URL_DEV=http://localhost:3001
 CHAT_URL=http://chat-service:8082
 AUTH_URL=http://auth-service:8081
 VITE_GATEWAY_URL=http://localhost:8080
-VITE_WEBSOCKET_URL=ws://localhost:8082/chat
+VITE_WEBSOCKET_URL=ws://localhost:8080
