--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
             allowedMethods:
               - GET
               - POST
-              - PUT
+              - PATCH
               - DELETE
               - OPTIONS
             allowedHeaders:
