--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ CHAT_URL=http://chat-service:8082
 AUTH_URL=http://auth-service:8081
 VITE_GATEWAY_URL=http://localhost:8080
 VITE_WEBSOCKET_URL=ws://localhost:8080
+AUTH_SERVICE_URL=http://gateway:8080/auth/api
