--- a/backend/chat-service/src/main/resources/application.properties
+++ b/backend/chat-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=8082
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
 spring.main.web-application-type=reactive
+auth.service.url=${AUTH_SERVICE_URL}
