--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -46,6 +46,7 @@ services:
     environment:
       SPRING_DATA_MONGODB_URI: ${MONGODB_URI}
       SPRING_DATA_MONGODB_DATABASE: ${MONGODB_DATABASE}
+      AUTH_SERVICE_URL: ${AUTH_SERVICE_URL}
       SPRING_DEVTOOLS_RESTART_ENABLED: "true"
     ports:
       - "8082:8082"
